--- a/index.html
+++ b/index.html
@@ -159,15 +159,7 @@
 <div id="xr_page_Amanda-Cooksey_4"></div>
 <div class="xr_apb xr_pp" style="width: 1129px; height: 458px; top:0px; left:0px; background-color: white; box-shadow: 5px 5px 6px rgba(0,0,0,0.25);"></div>
 <div id="xr_xrc4" class="xr_ap xr_xrc" style="width: 1130px; height: 458px; overflow:hidden;">
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:0px;top:0px;width:1130px;height:432px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:460px;top:176px;width:671px;height:256px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:1083px;top:28px;width:47px;height:60px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/26kJPZYrjUsdqzuLneV5T3?utm_source=generator" width="1130" height="458" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </div>
 </div>
 <div class="xr_app xr_page4 xr_bgn_4_0_0" id="xr_page4" style="height: 515px; left:0px;">
@@ -203,15 +195,7 @@
 <div id="xr_page_Amanda-Cooksey_6"></div>
 <div class="xr_apb xr_pp" style="width: 1129px; height: 317px; top:0px; left:0px; background-color: white; box-shadow: 5px 5px 6px rgba(0,0,0,0.25);"></div>
 <div id="xr_xrc6" class="xr_ap xr_xrc" style="width: 1130px; height: 317px; overflow:hidden;">
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:0px;top:0px;width:1130px;height:432px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:460px;top:176px;width:671px;height:256px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:1083px;top:28px;width:47px;height:60px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/7LqMxYoxJEgyJh3qqDjwn9?utm_source=generator" width="1130" height="500" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </div>
 </div>
 <div class="xr_app xr_page6 xr_bgn_6_0_0" id="xr_page6" style="height: 482px; left:0px;">
@@ -242,15 +226,7 @@
 <div id="xr_page_Amanda-Cooksey_8"></div>
 <div class="xr_apb xr_pp" style="width: 1129px; height: 680px; top:0px; left:0px; background-color: white; box-shadow: 5px 5px 6px rgba(0,0,0,0.25);"></div>
 <div id="xr_xrc8" class="xr_ap xr_xrc" style="width: 1130px; height: 680px; overflow:hidden;">
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:0px;top:0px;width:1130px;height:432px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:460px;top:176px;width:671px;height:256px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:1083px;top:28px;width:47px;height:60px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
+<iframe src="https://songdata.io/track/665QXaa8oUVA9hH2FPWLsh/Wish-You-Were-Here-by-Amanda-Cooksey?embedded=true" width="1130px" height="680px"></iframe>
 </div>
 </div>
 <div class="xr_app xr_page8 xr_bgn_8_0_0" id="xr_page8" style="height: 415px; left:0px;">
